--- a/carltons-karoo/index.html
+++ b/carltons-karoo/index.html
@@ -43,7 +43,7 @@ content="text/html;charset=utf-8" />
 					 <div id="contentBottom">
 							<ul>
 								<li>
-										<a href="/4sell/A1.amicorum.(TOK67).s.png" target="_blank">Lithops amicorum (TOK67)</a> $5
+										<a href="/4sell/A1.amicorum.(TOK67).s.png"">Lithops amicorum (TOK67)</a> $5
 								</li>
 									<hr>
 								<li>
