--- a/carltons-karoo/main.html
+++ b/carltons-karoo/main.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="content-type"
 content="text/html;charset=utf-8" />
 		<title>
-		Carlton's Karoo
+		Carlton's Karoo: Succulent Seeds & Plants
 		</title>
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0">
 		
@@ -24,20 +24,20 @@ content="text/html;charset=utf-8" />
 			</div><!--Close Package Header Div-->
 			
 				<div id="contentSingle">
-						     <h3 class="textHeaderLabel">Cactaceae | 10 seeds</h3>
+						     <h3 class="textHeaderLabel">For Sale</h3>
 				</div>
 					<div id="contentBottom">
 							<ul>
 								<li>
-									<a href="" target="_blank">Ariocarpus fissuratus</a> $4
+									<a href="seeds.html" >Seeds</a>
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Ariocarpus retusus</a> $4
+									<a href="plants.html" >Plants</a>
 								</li>
 						</div>
 				<div id="contentSingle">
-						     <h3 class="textHeaderLabel.fill">d</h3>
+						     <h3 class="textHeaderLabel">Relevant Links</h3>
 				</div>
 						
 			</div><!--Close Package Header Div-->
