--- a/carltons-karoo/plants.html
+++ b/carltons-karoo/plants.html
@@ -17,7 +17,7 @@ content="text/html;charset=utf-8" />
 		<div id="container">
 			
 			<div id="contentSingleTop">
-				<img src="depics/images/plants.jpg" 
+				<img src="/depics/images/plants.jpg" 
 				class="croppedImage">
 				<h2 class="repoDescriptionHeader>Plants<br></h2>
 			
