--- a/carltons-karoo/index.html
+++ b/carltons-karoo/index.html
@@ -18,7 +18,7 @@ content="text/html;charset=utf-8" />
 			
 			<div id="contentSingleTop">
 				<img src="depics/images/logo.jpg" 
-				class="croppedImage">
+				class="Image">
 				<h2 class="repoDescriptionHeader">Carlton's<br>Karoo</h2>
 			
 			</div><!--Close Package Header Div-->
