--- a/carltons-karoo/plants.html
+++ b/carltons-karoo/plants.html
@@ -19,7 +19,7 @@ content="text/html;charset=utf-8" />
 			<div id="contentSingleTop">
 				<img src="depics/images/plants.jpg" 
 				class="croppedImage">
-				<h2 class="repoDescriptionHeader>Plants<br>For Sale</h2>
+				<h2 class="repoDescriptionHeader">Plants<br>For Sale</h2>
 			
 			</div><!--Close Package Header Div-->
 			<div id="contentSingle">
