--- a/carltons-karoo/plants.html
+++ b/carltons-karoo/plants.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="content-type"
 content="text/html;charset=utf-8" />
 		<title>
-		Carlton's Karoo: Plants
+		CK: Plants
 		</title>
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0">
 		
@@ -19,7 +19,7 @@ content="text/html;charset=utf-8" />
 			<div id="contentSingleTop">
 				<img src="depics/images/plants.jpg" 
 				class="croppedImage">
-				<h2 class="repoDescriptionHeader" >Plants</h2>
+				<h2 class="repoDescriptionHeader" >Plants<br>For Sale</h2>
 			
 			</div><!--Close Package Header Div-->
 			<div id="contentSingle">
