--- a/carltons-karoo/index.html
+++ b/carltons-karoo/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="content-type"
 content="text/html;charset=utf-8" />
 		<title>
-		Carlton's Karoo: Succulent Seeds & Plants
+		Carlton&#39;s Karoo
 		</title>
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0">
 		
