--- a/carltons-karoo/seeds.html
+++ b/carltons-karoo/seeds.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="content-type"
 content="text/html;charset=utf-8" />
 		<title>
-		Carlton's Karoo: Seeds
+		CK: Seeds
 		</title>
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0">
 		
@@ -17,7 +17,7 @@ content="text/html;charset=utf-8" />
 		<div id="container">
 			
 			<div id="contentSingleTop">
-				<img src="depics/images/logo.jpg" 
+				<img src="depics/images/seeds.jpg" 
 				class="croppedImage">
 				<h2 class="repoDescriptionHeader">Seeds<br>For Sale</h2>
 			
