--- a/carltons-karoo/index.html
+++ b/carltons-karoo/index.html
@@ -18,7 +18,7 @@ content="text/html;charset=utf-8" />
 			
 			<div id="contentSingleTop">
 				<img src="depics/images/logo.jpg" 
-				class="Image">
+				class="image">
 				<h2 class="repoDescriptionHeader">Carlton's<br>Karoo</h2>
 			
 			</div><!--Close Package Header Div-->
@@ -36,6 +36,87 @@ content="text/html;charset=utf-8" />
 									<a href="plants.html" >Plants</a>
 								</li>
 						</div>
+						<div id="contentSingle">
+						     <h3 class="textHeaderLabel">Aizocaceae | 25 seeds </h3>
+					 </div>
+					 <div id="contentBottom">
+							<ul>
+								<li>
+										<a href="/pics/A1.amicorum.(TOK67).s.png"">Lithops amicorum (TOK67)</a> $5
+								</li>
+									<hr>
+								<li>
+										<a href="" >Lithops halii C45</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops herrei C213</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops hookeri v. lutea</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops julii C216</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops julii C297</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops karasmontana v. bella</a> $6
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops karasmontana “lericheana”</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops karasmontana “mickbergensis”</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops karasmontana “signalberg”</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops karasmontana “summitatum”</a> $6
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops karasmontana v. tischeri C181</a> $6
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops karasmontana C227</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops marmorata “framesii”</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops naureeniae C304</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops schwantesii C79</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops schwantesii v. rugosa</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops schwantesii v. rugosa C192</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" >Lithops schwantesii “urikoensis”</a> $7
+								</li>
+					</div>
 				<div id="contentSingle">
 						     <h3 class="textHeaderLabel">Relevant Links</h3>
 				</div>
