--- a/index.html
+++ b/index.html
@@ -2,91 +2,94 @@
 <html>
 	<head>
 		<title>
-		carlyd95's Repo
+		carlyd95
 		</title>
-		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0">
+		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0", charset="UTF-8">
 		
 		<link rel="stylesheet" type="text/css" href="depics/css/layoutNew.css">
 	</head>
 
 	<body>
+
+		<div id="myNav" class="overlay">
+		  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+		  <div class="overlay-content">
+		    <a href="/">Home</a>
+		    <a href="/carltons-karoo">Carlton&apos;s Karoo</a>
+		    <a href="#">Succulent Cultivation Notes</a>
+		    <a href="#">Homebrew</a>
+		  </div>
+		</div>
 		<div class="outer">
 		<div class="middle">
 		<div id="container">
 			
 			<div id="contentSingleTop">
-				<img class="repoDescription" src="depics/images/repoLogo.png">
+				<img class="croppedImage" src="depics/images/logo
+				.jpg">
 				<h2
-class="repoDescriptionHeader">&nbsp;carlyd95</h3>
+class="repoDescriptionHeader">Carlton<br>Dunlap</h2>
+	
+		<span style="font-size:35px;cursor:pointer" class="right" onclick="openNav()">&#9776;</span>
+
+<script>
+function openNav() {
+  document.getElementById("myNav").style.width = "100%";
+}
+
+function closeNav() {
+  document.getElementById("myNav").style.width = "0%";
+}
+</script>
 			
 			</div><!--Close Package Header Div-->
 			<div id="contentSingle">
-				<h3 class="textHeaderLabel">Description</h3>
+				<h3 class="textHeaderLabel">A little about myself...</h3>
 			</div>
 			<div id="contentBottom">
 				<ul>
-					<li><p>Old cydia repo... now used for homebrew and succulent cultivation notes :)</p></li> </ul> </div>
-
-			 <div id="contentSingle">
-				     <h3 class="textHeaderLabel">Links</h3>
-			 </div>
-			 <div id="contentBottom">
-					<ul>
-						<li>
-	  						<a href="https://carlyd95.github.io/carltons-karoo" target="_blank">Carlton's Karoo: Seeds & Plants</a>
-	  					</li>
-	  						<hr>
-						<li>
-							<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://carlyd95.github.io/repo/" target="_blank">Add My Repo</a>
-						</li>
-							<hr>
-						<li>
-							<a href="https://dailytext.000webhostapp.com/" target="_blank">JW Daily Text Subscription</a>
-						</li>
-							<hr>
-						<li>
-							<a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
-						</li>
-							<hr>
-						<li>
-							<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=dcarltondunlap%40hotmail%2ecom&lc=US&item_name=carlyd95&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" target="_blank">Donate to Developer</a>
-						</li>
-							<hr>
-						<li>
-							<a href="http://carlyd95.github.io/KaraokeList.csv" target="_blank">Karaoke Song List</a>
-						</li>
-							<hr>
-						<li>
-							<a href="sms:dcarltondunlap@me.com" target="_blank">iMessage Me</a>
-						</li>
-							<hr>
-	                    <li>
-	                            <a href="http://carlyd95.github.io/hobby/plants/lithops.pdf" target="_blank">Lithops.pdf</a>
-							<hr>
-	                    </li>
-	                            <a href="http://carlyd95.github.io/data/ip.txt" target="_blank">RPIP</a>
-						</li>
-							<hr>
-	                    <li>
-	                            <a href="http://carlyd95.github.io/hobby/plants/wishlist.txt" target="_blank">Plant Wishlist</a>
-	                    </li>
-							<hr>
-	                    <li>
-	  						<a href="https://www.instagram.com/fat_leaves_and_long_spines/" target="_blank">plantstagram</a>
-	                    </li>
-							<hr>
-	                    <li>
-	  						<a href="https://carlyd95.github.io/hobby/beer" target="_blank">Brew Recipes</a>
-
-	                    </li>
-</div>
+					<li>
+						<p>Hey, my name is Carlton. I initially made this website to use as a cydia repo but my interests have overall changed over the past few years.  I am now using it as a fun way to teach myself HTML & CSS etc. while also making use of it to sell seeds that I have harvested from my collection of plants along with extra plants or seed grown plants, primarily cacti and african succulents.  I also plan to use this site as a way to share with other plant enthusiasts certain things i have learned and resources I have used.  I too will be using this website to host my homebrew recipes to share with homebrewers and others alike.</p>
 					</li>
-				</ul>			
-			</div><!--Close Package Header Div-->
+				</ul>
+			</div>
 
-		</div><!--Close Container Div-->
-		</div>
-		</div>
+			<div id="contentSingle">
+				<h3 class="textHeaderLabel">Links</h3>
+			</div>
+				<div id="contentBottom">
+					<ul>
+  						<a href="https://carlyd95.github.io/carltons-karoo" target="_blank">Carlton's Karoo: Seeds & Plants</a>
+							<hr>
+  						<a href="https://carlyd95.github.io/hobby/beer" target="_blank">Homebrew Recipes</a>
+							<hr>
+  						<a href="https://www.instagram.com/fat_leaves_and_long_spines/" target="_blank">Plantstagram</a>
+  							<hr>
+                        <a href="http://carlyd95.github.io/hobby/plants/wishlist.txt" target="_blank">Plant Wishlist</a>
+                			<hr>
+						<a href="https://paypal.me/dunlap794/" target="_blank">Buy Me a 🍺</a>
+							<hr>
+						<a href="http://carlyd95.github.io/KaraokeList.csv" target="_blank">Karaoke Song List</a>
+							<hr>							
+						<a href="sms:dcarltondunlap@me.com" target="_blank">iMessage Me</a>
+							<hr>
+                        <a href="http://carlyd95.github.io/hobby/plants/lithops.pdf" target="_blank">Lithops PDF</a>
+							<hr>							
+						<a href="https://dailytext.000webhostapp.com/" target="_blank">Daily Text Email Subscription</a>
+							<hr>							
+						<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://carlyd95.github.io/repo/" target="_blank">Add My Repo</a>
+							<hr>							
+						<a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
+                    		<hr>                    	
+                        <a href="http://carlyd95.github.io/data/ip.txt" target="_blank">RPIP</a>
+					</ul>			
+				</div><!--Close Package Header Div-->
+
+			</div><!--Close Container Div-->
+			</div>
+
+			</div>
+
 	</body>
 	
 </html>
