--- a/carltons-karoo/plants.html
+++ b/carltons-karoo/plants.html
@@ -8,7 +8,7 @@ content="text/html;charset=utf-8" />
 		</title>
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0">
 		
-		<link rel="stylesheet" type="text/css" href="depics/css/layoutNew.css">
+		<link rel="stylesheet" type="text/css" href="../depics/css/layoutNew.css">
 	</head>
 
 	<body>
@@ -17,7 +17,7 @@ content="text/html;charset=utf-8" />
 		<div id="container">
 			
 			<div id="contentSingleTop">
-				<img src="depics/images/plants.jpg" 
+				<img src="../depics/images/plants.jpg" 
 				class="croppedImage">
 				<h2 class="repoDescriptionHeader" >Plants<br>For Sale</h2>
 			
