--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>
-		carlyd95
+		Carlton&nbsp;s Karoo
 		</title>
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0", charset="UTF-8">
 		
@@ -12,12 +12,21 @@
 	<body>
 
 		<div id="myNav" class="overlay">
+			<h1 class="center">Page Navigation</h1>
 		  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 		  <div class="overlay-content">
+		  	<hr>
 		    <a href="/">Home</a>
-		    <a href="/carltons-karoo">Carlton&apos;s Karoo</a>
-		    <a href="#">Succulent Cultivation Notes</a>
-		    <a href="#">Homebrew</a>
+		    <hr>
+		    <a href="/carltons-karoo/seeds.html">Seeds</a>
+		     <hr>
+		    <a href="/carltons-karoo/plants.html">Plants </a>
+		    <hr>
+		    <a href="/carltons-karoo/cultivation.html">Succulent Cultivation Notes</a>
+
+		    <hr>
+		    <a href="/homebrew/index.html">Homebrew</a>
+		    <hr>
 		  </div>
 		</div>
 		<div class="outer">
@@ -28,7 +37,7 @@
 				<img class="croppedImage" src="depics/images/logo
 				.jpg">
 				<h2
-class="repoDescriptionHeader">Carlton<br>Dunlap</h2>
+class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 	
 		<span style="font-size:35px;cursor:pointer" class="right" onclick="openNav()">&#9776;</span>
 
