--- a/carltons-karoo/seeds.html
+++ b/carltons-karoo/seeds.html
@@ -8,7 +8,7 @@ content="text/html;charset=utf-8" />
 		</title>
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0">
 		
-		<link rel="stylesheet" type="text/css" href="depics/css/layoutNew.css">
+		<link rel="stylesheet" type="text/css" href="../depics/css/layoutNew.css">
 	</head>
 
 	<body>
@@ -17,7 +17,7 @@ content="text/html;charset=utf-8" />
 		<div id="container">
 			
 			<div id="contentSingleTop">
-				<img src="depics/images/seeds.jpg" 
+				<img src="../depics/images/seeds.jpg" 
 				class="croppedImage">
 				<h2 class="repoDescriptionHeader">Seeds<br>For Sale</h2>
 			
@@ -43,79 +43,79 @@ content="text/html;charset=utf-8" />
 					 <div id="contentBottom">
 							<ul>
 								<li>
-										<a href="/4sell/A1.amicorum.(TOK67).s.png"">Lithops amicorum (TOK67)</a> $5
+										<a href="/pics/A1.amicorum.(TOK67).s.png"">Lithops amicorum (TOK67)</a> $5
 								</li>
 									<hr>
 								<li>
-										<a href="" target="_blank">Lithops halii C45</a> $5
+										<a href="" >Lithops halii C45</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops herrei C213</a> $5
+									<a href="" >Lithops herrei C213</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops hookeri v. lutea</a> $5
+									<a href="" >Lithops hookeri v. lutea</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops julii C216</a> $5
+									<a href="" >Lithops julii C216</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops julii C297</a> $5
+									<a href="" >Lithops julii C297</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops karasmontana v. bella</a> $6
+									<a href="" >Lithops karasmontana v. bella</a> $6
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops karasmontana “lericheana”</a> $5
+									<a href="" >Lithops karasmontana “lericheana”</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops karasmontana “mickbergensis”</a> $5
+									<a href="" >Lithops karasmontana “mickbergensis”</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops karasmontana “signalberg”</a> $5
+									<a href="" >Lithops karasmontana “signalberg”</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops karasmontana “summitatum”</a> $6
+									<a href="" >Lithops karasmontana “summitatum”</a> $6
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops karasmontana v. tischeri C181</a> $6
+									<a href="" >Lithops karasmontana v. tischeri C181</a> $6
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops karasmontana C227</a> $5
+									<a href="" >Lithops karasmontana C227</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops marmorata “framesii”</a> $5
+									<a href="" >Lithops marmorata “framesii”</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops naureeniae C304</a> $5
+									<a href="" >Lithops naureeniae C304</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops schwantesii C79</a> $5
+									<a href="" >Lithops schwantesii C79</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops schwantesii v. rugosa</a> $5
+									<a href="" >Lithops schwantesii v. rugosa</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops schwantesii v. rugosa C192</a> $5
+									<a href="" >Lithops schwantesii v. rugosa C192</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops schwantesii “urikoensis”</a> $7
+									<a href="" >Lithops schwantesii “urikoensis”</a> $7
 								</li>
 					</div>
 				<div id="contentSingle">
@@ -124,44 +124,44 @@ content="text/html;charset=utf-8" />
 					<div id="contentBottom">
 							<ul>
 									<li>
-									<a href="" target="_blank">Ariocarpus fissuratus</a> $4
+									<a href="" >Ariocarpus fissuratus</a> $4
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Ariocarpus retusus</a> $4
+									<a href="" >Ariocarpus retusus</a> $4
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Gymnocalycium ragonesi</a> $3
+									<a href="" >Gymnocalycium ragonesi</a> $3
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Gymnocalycium damsii v. rotundulum hybrid</a> $3
+									<a href="" >Gymnocalycium damsii v. rotundulum hybrid</a> $3
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Gymnocalycium friedrichii hybrid</a> $3
+									<a href="" >Gymnocalycium friedrichii hybrid</a> $3
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lophophora diffusa cv. ‘Koike’</a> $5
+									<a href="" >Lophophora diffusa cv. ‘Koike’</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lophophora koehresii</a> $5
+									<a href="" >Lophophora koehresii</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lophophora williamsii</a> $5
+									<a href="" >Lophophora williamsii</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Melocactus albicephalus</a> $4
+									<a href="" >Melocactus albicephalus</a> $4
 						<!--
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" ></a>
 								</li>
 						-->
 
@@ -172,40 +172,40 @@ content="text/html;charset=utf-8" />
 					 <div id="contentBottom">
 							<ul>
 								<li>
-									<a href="" target="_blank">Gasteria armstrongii hybrid</a> $4
+									<a href="" >Gasteria armstrongii hybrid</a> $4
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Gasteria cv. ‘Polliwog’ hybrid</a> $5
+									<a href="" >Gasteria cv. ‘Polliwog’ hybrid</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Gasteria baylissiana x liliputana</a> $5
+									<a href="" >Gasteria baylissiana x liliputana</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Gasteria (batesiana x armstrongii) hybrid</a> $4
+									<a href="" >Gasteria (batesiana x armstrongii) hybrid</a> $4
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Gasteria cv. ‘Little Warty’ hybrid</a> $4
+									<a href="" >Gasteria cv. ‘Little Warty’ hybrid</a> $4
 								</li>
 						<!--
 									<hr>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" ></a>
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" ></a>
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" ></a>
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" ></a>
 								</li>
 						-->
 
