--- a/carltons-karoo/plants.html
+++ b/carltons-karoo/plants.html
@@ -15,11 +15,42 @@ content="text/html;charset=utf-8" />
 		<div class="outer">
 		<div class="middle">
 		<div id="container">
-			
+
+			<div id="myNav" class="overlay">
+			<h1 class="center">Page Navigation</h1>
+		  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+		  <div class="overlay-content">
+		  	<hr>
+		    <a href="/">Home</a>
+		    <hr>
+		    <a href="/carltons-karoo/seeds.html">Seeds</a>
+		     <hr>
+		    <a href="/carltons-karoo/plants.html">Plants </a>
+		    <hr>
+		    <a href="/carltons-karoo/cultivation.html">Succulent Cultivation Notes</a>
+
+		    <hr>
+		    <a href="/homebrew/index.html">Homebrew</a>
+		    <hr>
+		  </div>
+		</div>
+
 			<div id="contentSingleTop">
 				<img src="../depics/images/plants.jpg" 
 				class="croppedImage">
 				<h2 class="repoDescriptionHeader" >Plants<br>For Sale</h2>
+
+				<span style="font-size:35px;cursor:pointer" class="right" onclick="openNav()">&#9776;</span>
+
+				<script>
+				function openNav() {
+				  document.getElementById("myNav").style.width = "100%";
+				}
+
+				function closeNav() {
+				  document.getElementById("myNav").style.width = "0%";
+				}
+				</script>
 			
 			</div><!--Close Package Header Div-->
 			<div id="contentSingle">
