--- a/carltons-karoo/index.html
+++ b/carltons-karoo/index.html
@@ -55,6 +55,8 @@ content="text/html;charset=utf-8" />
 							<hr>
 	                    <li>
                        		<a href="sowingtips.txt" >General Seed Sowing Tips</a>
+  							<hr>
+                        <a href="http://carlyd95.github.io/hobby/plants/wishlist.txt" target="_blank">Plant Wishlist</a>
 	                    </li>
 							<hr>
 	                    <li>
