--- a/carltons-karoo/plants.html
+++ b/carltons-karoo/plants.html
@@ -69,133 +69,18 @@ content="text/html;charset=utf-8" />
 			</div>
 
 					 <div id="contentSingle">
-						     <h3 class="textHeaderLabel">Aizocaceae | 25 seeds </h3>
+						     <h3 class="textHeaderLabel">Aizocaceae | 25 seeds </H3>
 					 </div>
 					 <div id="contentBottom">
-							<ul>
-								<li>
-										<a href="/4sell/A1.amicorum.(TOK67).s.png"">Lithops amicorum (TOK67)</a> $5
-								</li>
-									<hr>
-								<li>
-										<a href="" target="_blank">Lithops halii C45</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops herrei C213</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops hookeri v. lutea</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops julii C216</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops julii C297</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops karasmontana v. bella</a> $6
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops karasmontana “lericheana”</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops karasmontana “mickbergensis”</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops karasmontana “signalberg”</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops karasmontana “summitatum”</a> $6
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops karasmontana v. tischeri C181</a> $6
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops karasmontana C227</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops marmorata “framesii”</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops naureeniae C304</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops schwantesii C79</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops schwantesii v. rugosa</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops schwantesii v. rugosa C192</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lithops schwantesii “urikoensis”</a> $7
-								</li>
+					 	<a>Out Of Stock</a>	
 					</div>
 				<div id="contentSingle">
 						     <h3 class="textHeaderLabel">Cactaceae | 10 seeds</h3>
 				</div>
 					<div id="contentBottom">
-							<ul>
-									<li>
-									<a href="" target="_blank">Ariocarpus fissuratus</a> $4
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Ariocarpus retusus</a> $4
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Gymnocalycium ragonesi</a> $3
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Gymnocalycium damsii v. rotundulum hybrid</a> $3
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Gymnocalycium friedrichii hybrid</a> $3
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lophophora diffusa cv. ‘Koike’</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lophophora koehresii</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Lophophora williamsii</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Melocactus albicephalus</a> $4
-						<!--
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-						-->
-
+						<a href="pics/plants/9386.JPG" >Parodia Werneri</a>
+							<hr>
+						<a href="" target="_blank">Melocactus Mantazanus</a>
 					</div>
 					<div id="contentSingle">
 						     <h3 class="textHeaderLabel">Asphodelaceae | 10 seeds</h3>
@@ -204,23 +89,7 @@ content="text/html;charset=utf-8" />
 							<ul>
 								<li>
 									<a href="" target="_blank">Gasteria armstrongii hybrid</a> $4
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Gasteria cv. ‘Polliwog’ hybrid</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Gasteria baylissiana x liliputana</a> $5
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Gasteria (batesiana x armstrongii) hybrid</a> $4
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Gasteria cv. ‘Little Warty’ hybrid</a> $4
-								</li>
+								
 						<!--
 									<hr>
 								<li>
