--- a/carltons-karoo/seedstext.html
+++ b/carltons-karoo/seedstext.html
@@ -9,9 +9,6 @@ content="text/html;charset=utf-8" />
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0">
 		
 		<link rel="stylesheet" type="text/css" href="../depics/css/layoutNew.css">
-
-		<link rel="stylesheet" type="text/css" href="depics/css/layoutNew.css">
-		<link rel="icon" href='/images/seeds.jpg' type='image' />
 	</head>
 
 	<body>
@@ -65,7 +62,7 @@ content="text/html;charset=utf-8" />
 						<p>For the time being U.S. orders only...
 								<br>
 								<br>
-							The shipping is $2 for up to 6 packs of seeds. $0.50 for each additional 4 packs. Seed amount per pack differs according to familial rank and is displayed to the right of each botanical family. If seeds are the product of unknown hybridization the mother plant will be displayed. 
+							The shipping is $2 for up to 6 packs of seeds.  $0.50 for each additional 4 packs.  Seed amount per pack differs according to familial rank and is displayed to the right of each botanical family.  If seeds are the product of unknown hybridization the mother plant will be displayed. 
 						</p>
 					</li> 
 				</ul> 
@@ -86,18 +83,6 @@ content="text/html;charset=utf-8" />
 <a href="pics/seeds/aiz!lithops!karasmontana &#34;summitatum&#34;!5.JPG">Lithops karasmontana "summitatum"</a> $5<hr>
 <a href="pics/seeds/aiz!lithops!herrei C213!5.JPG">Lithops herrei C213</a> $5<hr>
 <a href="pics/seeds/aiz!lithops!karasmontana v. tischeri C182!5.JPG">Lithops karasmontana v. tischeri C182</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!amicorum TOK67!5.JPG">Lithops amicorum TOK67</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!karasmontana &#34;mickbergensis&#34;!5.JPG">Lithops karasmontana "mickbergensis"</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!schwantesii v. rugosa!5.JPG">Lithops schwantesii v. rugosa</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!schwantesii c79!5.JPG">Lithops schwantesii c79</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!naureeniae C304!5.JPG">Lithops naureeniae C304</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!halii C45!5.JPG">Lithops halii C45</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!julii C297!5.JPG">Lithops julii C297</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!julii C216!5.JPG">Lithops julii C216</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!marmorata &#34;framesii&#34;!5.JPG">Lithops marmorata "framesii"</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!karasmontana &#34;summitatum&#34;!5.JPG">Lithops karasmontana "summitatum"</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!herrei C213!5.JPG">Lithops herrei C213</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!karasmontana v. tischeri C182!5.JPG">Lithops karasmontana v. tischeri C182</a> $5<hr>
 <a href="pics/seeds/aiz!lithops!amicorum TOK67!5.JPG">Lithops amicorum TOK67</a> $5</ul>
 					</div><div id="contentSingle">
 						     <h3 class="textHeaderLabel">Asphodelaceae | 10 seeds</h3>
@@ -106,24 +91,14 @@ content="text/html;charset=utf-8" />
 					 	<ul><a href="pics/seeds/asp!gasteria!armstrongii hybrid x ?!6.JPG">Gasteria armstrongii hybrid x ?</a> $6<hr>
 <a href="pics/seeds/asp!gasteria!armstrongii x ?!6.JPG">Gasteria armstrongii x ?</a> $6<hr>
 <a href="pics/seeds/asp!gasteria!(armstrongii x batesiana) x ?!6.JPG">Gasteria (armstrongii x batesiana) x ?</a> $6<hr>
-<a href="pics/seeds/asp!gasteria!armstrongii cv. 'Poliwog' x ?!6.JPG">Gasteria armstrongii cv. 'Poliwog' x ?</a> $6<hr>
-<a href="pics/seeds/asp!gasteria!armstrongii x ?!6.JPG">Gasteria armstrongii x ?</a> $6<hr>
-<a href="pics/seeds/asp!gasteria!(armstrongii x batesiana) x ?!6.JPG">Gasteria (armstrongii x batesiana) x ?</a> $6<hr>
 <a href="pics/seeds/asp!gasteria!armstrongii cv. 'Poliwog' x ?!6.JPG">Gasteria armstrongii cv. 'Poliwog' x ?</a> $6</ul>
 					</div><div id="contentSingle">
 						     <h3 class="textHeaderLabel">Cactaceae | 10 seeds</h3>
 					 </div>
 					 <div id="contentBottom">
 					 	<ul><a href="pics/seeds/cac!melocactus!albicephalus!4.JPG">Melocactus albicephalus</a> $4</ul>
-					</div></ul>
-					</div>
-					</li>
-				</ul>			
-			</div><!--Close Package Header Div-->
-
-		</div><!--Close Container Div-->
-		</div>
-		</div>
-	</body>
-	
-</html>
+					</div><div id="contentSingle">
+						     <h3 class="textHeaderLabel">s</h3>
+					 </div>
+					 <div id="contentBottom">
+					 	<ul>
