--- a/carltons-karoo/plants.html
+++ b/carltons-karoo/plants.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="content-type"
 content="text/html;charset=utf-8" />
 		<title>
-		CK: Plants
+		CK: Seeds
 		</title>
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0">
 		
@@ -38,7 +38,7 @@ content="text/html;charset=utf-8" />
 			<div id="contentSingleTop">
 				<img src="../depics/images/plants.jpg" 
 				class="croppedImage">
-				<h2 class="repoDescriptionHeader" >Plants<br>For Sale</h2>
+				<h2 class="repoDescriptionHeader">Plants<br>For Sale</h2>
 
 				<span style="font-size:35px;cursor:pointer" class="right" onclick="openNav()">&#9776;</span>
 
@@ -54,7 +54,7 @@ content="text/html;charset=utf-8" />
 			
 			</div><!--Close Package Header Div-->
 			<div id="contentSingle">
-				<h3 class="textHeaderLabel">Plant Order Information</h3>
+				<h3 class="textHeaderLabel">Order Information</h3>
 			</div>
 			<div id="contentBottom">
 				<ul>
@@ -62,55 +62,95 @@ content="text/html;charset=utf-8" />
 						<p>For the time being U.S. orders only...
 								<br>
 								<br>
-							The minimum shipping costs for any plant ordrs is $8. The picture displayed  
+							The minimum shipping costs for any plant ordrs is $8. The plant for sale is in the picture displayed 
 						</p>
 					</li> 
 				</ul> 
 			</div>
-
-					 <div id="contentSingle">
-						     <h3 class="textHeaderLabel">Aizocaceae | 25 seeds </H3>
+<div id="contentSingle">
+						     <h3 class="textHeaderLabel">Asphodelaceae</h3>
 					 </div>
 					 <div id="contentBottom">
-					 	<a>Out Of Stock</a>	
-					</div>
-				<div id="contentSingle">
-						     <h3 class="textHeaderLabel">Cactaceae | 10 seeds</h3>
-				</div>
-					<div id="contentBottom">
-						<a href="pics/plants/9386.JPG" >Parodia Werneri</a>
-							<hr>
-						<a href="" target="_blank">Melocactus Mantazanus</a>
-					</div>
-					<div id="contentSingle">
-						     <h3 class="textHeaderLabel">Asphodelaceae | 10 seeds</h3>
+					 	<ul><a href="pics/plants/asp!haworthia!cv. 'Yukigeshiki'!18.JPG">Haworthia cv. 'Yukigeshiki'</a> $18<hr>
+<a href="pics/plants/asp!haworthiopsis!cf. attenuata x limifolia!10.JPG">Haworthiopsis cf. attenuata x limifolia</a> $10<hr>
+<a href="pics/plants/asp!gasteraloe!species!8.JPG">Gasteraloe species</a> $8<hr>
+<a href="pics/plants/asp!haworthiopsis!limifolia f. variegata!18.JPG">Haworthiopsis limifolia f. variegata</a> $18<hr>
+<a href="pics/plants/asp!haworthiopsis!tessellata!8.JPG">Haworthiopsis tessellata</a> $8<hr>
+<a href="pics/plants/asp!haworthia!acuminata!14.JPG">Haworthia acuminata</a> $14<hr>
+<a href="pics/plants/asp!haworthiopsis!attenuata v. tanba &#34;enon&#34;!8.JPG">Haworthiopsis attenuata v. tanba "enon"</a> $8<hr>
+<a href="pics/plants/asp!tulista!pumila!8.JPG">Tulista pumila</a> $8<hr>
+<a href="pics/plants/asp!haworthia!pygmaea!8.JPG">Haworthia pygmaea</a> $8<hr>
+<a href="pics/plants/asp!haworthiopsis!attenuata v. radula!8.JPG">Haworthiopsis attenuata v. radula</a> $8<hr>
+<a href="pics/plants/asp!tulista!&#34;uitewaaliana&#34; CL1!38.JPG">Tulista "uitewaaliana" CL1</a> $38<hr>
+<a href="pics/plants/asp!haworthiopsis!attenuata!8.JPG">Haworthiopsis attenuata</a> $8<hr>
+<a href="pics/plants/asp!gasteria!carinata!10.JPG">Gasteria carinata</a> $10<hr>
+<a href="pics/plants/asp!haworthiopsis!coarctata v. chulamnensis!6.JPG">Haworthiopsis coarctata v. chulamnensis</a> $6<hr>
+<a href="pics/plants/asp!tulista!pumila!14.JPG">Tulista pumila</a> $14<hr>
+<a href="pics/plants/asp!haworthiopsis!cf. attenuata x limifolia!10.JPG">Haworthiopsis cf. attenuata x limifolia</a> $10<hr>
+<a href="pics/plants/asp!gasteraloe!species!8.JPG">Gasteraloe species</a> $8<hr>
+<a href="pics/plants/asp!haworthiopsis!limifolia f. variegata!18.JPG">Haworthiopsis limifolia f. variegata</a> $18<hr>
+<a href="pics/plants/asp!haworthiopsis!tessellata!8.JPG">Haworthiopsis tessellata</a> $8<hr>
+<a href="pics/plants/asp!haworthia!acuminata!14.JPG">Haworthia acuminata</a> $14<hr>
+<a href="pics/plants/asp!haworthiopsis!attenuata v. tanba &#34;enon&#34;!8.JPG">Haworthiopsis attenuata v. tanba "enon"</a> $8<hr>
+<a href="pics/plants/asp!tulista!pumila!8.JPG">Tulista pumila</a> $8<hr>
+<a href="pics/plants/asp!haworthia!pygmaea!8.JPG">Haworthia pygmaea</a> $8<hr>
+<a href="pics/plants/asp!haworthiopsis!attenuata v. radula!8.JPG">Haworthiopsis attenuata v. radula</a> $8<hr>
+<a href="pics/plants/asp!tulista!&#34;uitewaaliana&#34; CL1!38.JPG">Tulista "uitewaaliana" CL1</a> $38<hr>
+<a href="pics/plants/asp!haworthiopsis!attenuata!8.JPG">Haworthiopsis attenuata</a> $8<hr>
+<a href="pics/plants/asp!gasteria!carinata!10.JPG">Gasteria carinata</a> $10<hr>
+<a href="pics/plants/asp!haworthiopsis!coarctata v. chulamnensis!6.JPG">Haworthiopsis coarctata v. chulamnensis</a> $6<hr>
+<a href="pics/plants/asp!tulista!pumila!14.JPG">Tulista pumila</a> $14</ul>
+					</div><div id="contentSingle">
+						     <h3 class="textHeaderLabel">Cactaceae</h3>
 					 </div>
 					 <div id="contentBottom">
-							<ul>
-								<li>
-									<a href="" target="_blank">Gasteria armstrongii hybrid</a> $4
-								
-						<!--
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-						-->
-
+					 	<ul><a href="pics/plants/cac!tephrocactus!alexanderi v. geometricus!48.JPG">Tephrocactus alexanderi v. geometricus</a> $48<hr>
+<a href="pics/plants/cac!parodia!werneri!8.JPG">Parodia werneri</a> $8<hr>
+<a href="pics/plants/cac!trichocereus!chiloensis!12.JPG">Trichocereus chiloensis</a> $12<hr>
+<a href="pics/plants/cac!trichocereus!terscheckii!16.JPG">Trichocereus terscheckii</a> $16<hr>
+<a href="pics/plants/cac!ferocactus!latispinus!10.JPG">Ferocactus latispinus</a> $10<hr>
+<a href="pics/plants/cac!melocactus!mantazanus!18.JPG">Melocactus mantazanus</a> $18<hr>
+<a href="pics/plants/cac!maihueniopsis!molinensis!15.JPG">Maihueniopsis molinensis</a> $15<hr>
+<a href="pics/plants/cac!gymnocalycium!baldianum!8.JPG">Gymnocalycium baldianum</a> $8<hr>
+<a href="pics/plants/cac!parodia!werneri!8.JPG">Parodia werneri</a> $8<hr>
+<a href="pics/plants/cac!trichocereus!chiloensis!12.JPG">Trichocereus chiloensis</a> $12<hr>
+<a href="pics/plants/cac!trichocereus!terscheckii!16.JPG">Trichocereus terscheckii</a> $16<hr>
+<a href="pics/plants/cac!ferocactus!latispinus!10.JPG">Ferocactus latispinus</a> $10<hr>
+<a href="pics/plants/cac!melocactus!mantazanus!18.JPG">Melocactus mantazanus</a> $18<hr>
+<a href="pics/plants/cac!maihueniopsis!molinensis!15.JPG">Maihueniopsis molinensis</a> $15<hr>
+<a href="pics/plants/cac!gymnocalycium!baldianum!8.JPG">Gymnocalycium baldianum</a> $8</ul>
+					</div><div id="contentSingle">
+						     <h3 class="textHeaderLabel">Euphorbiaceae</h3>
+					 </div>
+					 <div id="contentBottom">
+					 	<ul><a href="pics/plants/eup!euphorbia!species 2!8.JPG">Euphorbia species 2</a> $8<hr>
+<a href="pics/plants/eup!euphorbia!baioensis!12.JPG">Euphorbia baioensis</a> $12<hr>
+<a href="pics/plants/eup!euphorbia!species 1!10.JPG">Euphorbia species 1</a> $10<hr>
+<a href="pics/plants/eup!euphorbia!griseola!12.JPG">Euphorbia griseola</a> $12<hr>
+<a href="pics/plants/eup!euphorbia!species 3!12.JPG">Euphorbia species 3</a> $12<hr>
+<a href="pics/plants/eup!euphorbia!heteropoda!10.JPG">Euphorbia heteropoda</a> $10<hr>
+<a href="pics/plants/eup!euphorbia!baioensis!12.JPG">Euphorbia baioensis</a> $12<hr>
+<a href="pics/plants/eup!euphorbia!species 1!10.JPG">Euphorbia species 1</a> $10<hr>
+<a href="pics/plants/eup!euphorbia!griseola!12.JPG">Euphorbia griseola</a> $12<hr>
+<a href="pics/plants/eup!euphorbia!species 3!12.JPG">Euphorbia species 3</a> $12<hr>
+<a href="pics/plants/eup!euphorbia!heteropoda!10.JPG">Euphorbia heteropoda</a> $10</ul>
+					</div><div id="contentSingle">
+						     <h3 class="textHeaderLabel">Portulacaceae</h3>
+					 </div>
+					 <div id="contentBottom">
+					 	<ul><a href="pics/plants/por!anacampseros!rufescens!8.JPG">Anacampseros rufescens</a> $8</ul>
+					</div></ul>
 					</div>
 					</li>
+				</ul>			
+			</div><!--Close Package Header Div-->
+
+		</div><!--Close Container Div-->
+		</div>
+		</div>
+	</body>
+	
+</html>				</li>
 				</ul>			
 			</div><!--Close Package Header Div-->
 
