--- a/carltons-karoo/seeds.html
+++ b/carltons-karoo/seeds.html
@@ -11,7 +11,7 @@ content="text/html;charset=utf-8" />
 		<link rel="stylesheet" type="text/css" href="../depics/css/layoutNew.css">
 
 		<link rel="stylesheet" type="text/css" href="depics/css/layoutNew.css">
-		<link rel="icon" href='/images/seeds.jpg' type='image' />
+		<link rel="icon" href='/images/seeds.jpg' type='image/jpg' />
 	</head>
 
 	<body>
