--- a/carltons-karoo/plants.html
+++ b/carltons-karoo/plants.html
@@ -20,21 +20,41 @@ content="text/html;charset=utf-8" />
 		<div id="container">
 
 			<div id="myNav" class="overlay">
-			<h1 class="center">Page Navigation</h1>
+			<h1 class="center">Carlton's Karoo</h1>
 		  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 		  <div class="overlay-content">
 		  	<hr>
 		    <a href="/">Home</a>
 		    <hr>
 		    <a href="/carltons-karoo/seeds.html">Seeds</a>
-		     <hr>
-		    <a href="/carltons-karoo/plants.html">Plants </a>
-		    <hr>
-		    <a href="/carltons-karoo/cultivation.html">Succulent Cultivation Notes</a>
-
-		    <hr>
-		    <a href="/homebrew/index.html">Homebrew</a>
-		    <hr>
+		    	<hr>
+		    <a href="/carltons-karoo/plants.html">Plants</a>
+		    	<hr>
+		    <a href="/carltons-karoo/cultivation.html">Cultivation Tips</a>
+		    	<hr>
+		    <a href="/carltons-karoo/sowing.html">Sowing Tips</a>
+		    	<hr>
+		    <a href="/carltons-karoo/sowing.html">Plant Wishlist</a>
+		    	<hr>
+		    <a href="/carltons-karoo/cultivation.html">Other References</a>
+		    	<hr>
+		    <a href="https://www.instagram.com/fat_leaves_and_long_spines/" target="_blank">Plantstagram</a>
+				<hr>
+			<a href="https://carlyd95.github.io/hobby/beer" target="_blank">Homebrew Recipes</a>
+				<hr>
+			<a href="http://carlyd95.github.io/KaraokeList.csv" target="_blank">Karaoke Song List</a>
+				<hr>
+	        <a href="http://carlyd95.github.io/hobby/carltons-karoo/lithops.pdf" target="_blank">Lithops PDF</a>
+				<hr>							
+			<a href="https://dailytext.000webhostapp.com/" target="_blank">Daily Text Email Subscription</a>
+				<hr>							
+			<a href="sms:dcarltondunlap@me.com" target="_blank">iMessage Me</a>
+				<hr>
+			<a href="https://paypal.me/dunlap794/" target="_blank">Buy Me a 🍺</a>
+				<hr>							
+			<a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
+				<hr>							
+			<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://carlyd95.github.io/repo/" target="_blank">Add My Repo (old cydia repo)</a> 
 		  </div>
 		</div>
 
