--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<img class="croppedImage" src="depics/images/logo
 				.jpg">
 				<h2
-class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
+class="repoDescriptionHeader">Carlton's&apos;s<br>Karoo</h2>
 			
 			</div><!--Close Package Header Div-->
 			<div id="contentSingle">
@@ -29,13 +29,13 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 			<div id="contentBottom">
 				<ul>
 					<li>
-						<p>Hey, my name is Carlton. I initially made this website to use as a cydia repo but my interests have overall changed over the past few years.  I am now using it as a fun way to teach myself HTML & CSS etc. while also making use of it to sell seeds that I have harvested from my collection of plants along with extra plants or seed grown plants, primarily cacti and african succulents.  I also plan to use this site as a way to share with other plant enthusiasts certain things i have learned and resources I have used.  I too will be using this website to host my homebrew recipes to share with homebrewers and others alike.</p>
+						<p>Hey, my name is Carlton. I initially adatpted this website from /u/uroboro to use as a cydia repo but my interests have overall changed over the past few years.  I am now using it as a fun way to teach myself HTML & CSS etc. while also making use of it to sell seeds that I have harvested from my collection of plants along with extra plants or seed grown plants, primarily cacti and african succulents.  I also plan to use this site as a way to share with other plant enthusiasts certain things i have learned and resources I have used.  I too will be using this website to host my homebrew recipes to share with homebrewers and others alike.</p>
 					</li>
 				</ul>
 			</div>
 
 			<div id="contentSingle">
-				<h3 class="textHeaderLabel">Content</h3>
+				<h3 class="textHeaderLabel">Carlton's Karoo</h3>
 			</div>
 				<div id="contentBottom">
 					<ul>
@@ -43,7 +43,9 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 					    	<hr>
 					    <a href="/carltons-karoo/plants.html">Plants</a>
 					    	<hr>
-					    <a href="/carltons-karoo/cultivation.html">Cultivation Tips</a>
+				    	<a href="https://www.instagram.com/fat_leaves_and_long_spines/" target="_blank">Plantstagram</a>
+							<hr>
+				        <a href="http://carlyd95.github.io/hobby/carltons-karoo/lithops.pdf" target="_blank">Lithops PDF</a>
 					    	<hr>
 					    <a href="/carltons-karoo/sowing.html">Sowing Tips</a>
 					    	<hr>
@@ -51,13 +53,18 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 					    	<hr>
 					    <a href="/carltons-karoo/cultivation.html">Other References</a>
 					    	<hr>
-					    <a href="https://www.instagram.com/fat_leaves_and_long_spines/" target="_blank">Plantstagram</a>
-							<hr>
+					    <a href="/carltons-karoo/cultivation.html">Cultivation Tips</a>
+				    </ul>			
+				</div><!--Close Package Header Div-->
+
+			<div id="contentSingle">
+				<h3 class="textHeaderLabel">Other</h3>
+			</div>
+				<div id="contentBottom">
+					<ul>
 						<a href="https://carlyd95.github.io/hobby/beer" target="_blank">Homebrew Recipes</a>
 							<hr>
 						<a href="http://carlyd95.github.io/KaraokeList.csv" target="_blank">Karaoke Song List</a>
-							<hr>
-				        <a href="http://carlyd95.github.io/hobby/carltons-karoo/lithops.pdf" target="_blank">Lithops PDF</a>
 							<hr>							
 						<a href="https://dailytext.000webhostapp.com/" target="_blank">Daily Text Email Subscription</a>
 							<hr>							
