--- a/carltons-karoo/seeds.html
+++ b/carltons-karoo/seeds.html
@@ -43,47 +43,32 @@ content="text/html;charset=utf-8" />
 						     <h3 class="textHeaderLabel">Aizoaceae | 25 seeds</h3>
 					 </div>
 					 <div id="contentBottom">
-					 	<ul><a href="pics/seeds/aiz!lithops!dinteri v. multipunctata C181!5.JPG">Lithops dinteri v. multipunctata C181</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!karasmontana &#34;mickbergensis&#34;!5.JPG">Lithops karasmontana "mickbergensis"</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!schwantesii v. rugosa!5.JPG">Lithops schwantesii v. rugosa</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!schwantesii c79!5.JPG">Lithops schwantesii c79</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!naureeniae C304!5.JPG">Lithops naureeniae C304</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!halii C45!5.JPG">Lithops halii C45</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!julii C297!5.JPG">Lithops julii C297</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!julii C216!5.JPG">Lithops julii C216</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!marmorata &#34;framesii&#34;!5.JPG">Lithops marmorata "framesii"</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!karasmontana &#34;summitatum&#34;!5.JPG">Lithops karasmontana "summitatum"</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!herrei C213!5.JPG">Lithops herrei C213</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!karasmontana v. tischeri C182!5.JPG">Lithops karasmontana v. tischeri C182</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!amicorum TOK67!5.JPG">Lithops amicorum TOK67</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!karasmontana &#34;mickbergensis&#34;!5.JPG">Lithops karasmontana "mickbergensis"</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!schwantesii v. rugosa!5.JPG">Lithops schwantesii v. rugosa</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!schwantesii c79!5.JPG">Lithops schwantesii c79</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!naureeniae C304!5.JPG">Lithops naureeniae C304</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!halii C45!5.JPG">Lithops halii C45</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!julii C297!5.JPG">Lithops julii C297</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!julii C216!5.JPG">Lithops julii C216</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!marmorata &#34;framesii&#34;!5.JPG">Lithops marmorata "framesii"</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!karasmontana &#34;summitatum&#34;!5.JPG">Lithops karasmontana "summitatum"</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!herrei C213!5.JPG">Lithops herrei C213</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!karasmontana v. tischeri C182!5.JPG">Lithops karasmontana v. tischeri C182</a> $5<hr>
-<a href="pics/seeds/aiz!lithops!amicorum TOK67!5.JPG">Lithops amicorum TOK67</a> $5</ul>
+					 	<ul><a href="pics/seeds/aiz!lithops!amicorum TOK67!5.JPG">Lithops amicorum TOK67</a>	$5<hr>
+<a href="pics/seeds/aiz!lithops!dinteri v. multipunctata C181!5.JPG">Lithops dinteri v. multipunctata C181</a>	$5<hr>
+<a href="pics/seeds/aiz!lithops!halii C45!5.JPG">Lithops halii C45</a>	$5<hr>
+<a href="pics/seeds/aiz!lithops!herrei C213!5.JPG">Lithops herrei C213</a>	$5<hr>
+<a href="pics/seeds/aiz!lithops!julii C216!5.JPG">Lithops julii C216</a>	$5<hr>
+<a href="pics/seeds/aiz!lithops!julii C297!5.JPG">Lithops julii C297</a>	$5<hr>
+<a href="pics/seeds/aiz!lithops!karasmontana &#34;mickbergensis&#34;!5.JPG">Lithops karasmontana "mickbergensis"</a>	$5<hr>
+<a href="pics/seeds/aiz!lithops!karasmontana &#34;summitatum&#34;!5.JPG">Lithops karasmontana "summitatum"</a>	$5<hr>
+<a href="pics/seeds/aiz!lithops!karasmontana v. tischeri C182!5.JPG">Lithops karasmontana v. tischeri C182</a>	$5<hr>
+<a href="pics/seeds/aiz!lithops!marmorata &#34;framesii&#34;!5.JPG">Lithops marmorata "framesii"</a>	$5<hr>
+<a href="pics/seeds/aiz!lithops!naureeniae C304!5.JPG">Lithops naureeniae C304</a>	$5<hr>
+<a href="pics/seeds/aiz!lithops!schwantesii c79!5.JPG">Lithops schwantesii c79</a>	$5<hr>
+<a href="pics/seeds/aiz!lithops!schwantesii v. rugosa!5.JPG">Lithops schwantesii v. rugosa</a>	$5</ul>
 					</div><div id="contentSingle">
 						     <h3 class="textHeaderLabel">Asphodelaceae | 10 seeds</h3>
 					 </div>
 					 <div id="contentBottom">
-					 	<ul><a href="pics/seeds/asp!gasteria!armstrongii hybrid x ?!6.JPG">Gasteria armstrongii hybrid x ?</a> $6<hr>
-<a href="pics/seeds/asp!gasteria!armstrongii x ?!6.JPG">Gasteria armstrongii x ?</a> $6<hr>
-<a href="pics/seeds/asp!gasteria!(armstrongii x batesiana) x ?!6.JPG">Gasteria (armstrongii x batesiana) x ?</a> $6<hr>
-<a href="pics/seeds/asp!gasteria!armstrongii cv. 'Poliwog' x ?!6.JPG">Gasteria armstrongii cv. 'Poliwog' x ?</a> $6<hr>
-<a href="pics/seeds/asp!gasteria!armstrongii x ?!6.JPG">Gasteria armstrongii x ?</a> $6<hr>
-<a href="pics/seeds/asp!gasteria!(armstrongii x batesiana) x ?!6.JPG">Gasteria (armstrongii x batesiana) x ?</a> $6<hr>
-<a href="pics/seeds/asp!gasteria!armstrongii cv. 'Poliwog' x ?!6.JPG">Gasteria armstrongii cv. 'Poliwog' x ?</a> $6</ul>
+					 	<ul><a href="pics/seeds/asp!gasteria!(armstrongii x batesiana) x ?!6.JPG">Gasteria (armstrongii x batesiana) x ?</a>	$6<hr>
+<a href="pics/seeds/asp!gasteria!armstrongii cv. 'Poliwog' x ?!6.JPG">Gasteria armstrongii cv. 'Poliwog' x ?</a>	$6<hr>
+<a href="pics/seeds/asp!gasteria!armstrongii hybrid x ?!6.JPG">Gasteria armstrongii hybrid x ?</a>	$6<hr>
+<a href="pics/seeds/asp!gasteria!armstrongii x ?!6.JPG">Gasteria armstrongii x ?</a>	$6</ul>
 					</div><div id="contentSingle">
 						     <h3 class="textHeaderLabel">Cactaceae | 10 seeds</h3>
 					 </div>
 					 <div id="contentBottom">
-					 	<ul><a href="pics/seeds/cac!melocactus!albicephalus!4.JPG">Melocactus albicephalus</a> $4</ul>
+					 	<ul><a href="pics/seeds/cac!melocactus!albicephalus!4.JPG">Melocactus albicephalus</a>	$4</ul>
 					</div></ul>
 					</div>
 					</li>
